# zero2prod

./: Cargo.toml  docker-compose.yml
.github/workflows/: ci.yaml
src/: config.rs  lib.rs  main.rs  routes.rs  types.rs
src/entity/: mod.rs  prelude.rs  subscriptions.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs  utils.rs
