[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.11.17"
