[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
chrono = "0.4.24"
derive_builder = "0.12.0"
dotenvy = "0.15.7"
hyper = { version = "0.14.26", features = ["full"] }
log = "0.4.17"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = { version = "0.1.37", features = ["async-await", "max_level_trace"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.17"
